# my-rknn-yolov5

./: README.md
cpp/: CMakeLists.txt  build_linux_x64.sh
cpp/cmake/: ConfigGen.cmake  Dependencies.cmake  JNIWrapGen.cmake  MiscCheck.cmake  ModelArrayBuild.cmake  Prerequisites.cmake  Summary.cmake  Utils.cmake
cpp/cmake/Templates/: CTempConfig.cmake.in  CTempConfigVersion.cmake.in  ExamplesCMakeLists.txt.in
cpp/examples/: CMakeLists.txt  WFRknnYoloDetector.cpp
cpp/include/: detector_bridge.h  error_constants.h  ncnn_proxy.h.txt  operator_tools.h  rknn_proxy.h  wavelib_tools.h  yolov5_detector.h
cpp/src/: CMakeLists.txt  ncnn_proxy.cpp.txt  operator_tools.cpp  rknn_proxy.cpp  yolov5_detector.cpp
cpp/test/: API-TEST.cpp  CMakeLists.txt
python/: detector_bridge.py  rknn_impl.py  test.py  torch_impl.py  yolov5_detector_impl.py
